--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.9.10",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
